--- a/src/main/resources/mail-templates/registration-template.html
+++ b/src/main/resources/mail-templates/registration-template.html
@@ -21,7 +21,7 @@
             <h3>Hello <span th:text="${username}"></span>!  This is HUrima Account registration mail.</h3>
             <p>Welcome to HUrima!</p>
             <p>Please click the link below and finish account registration.</p>
-            <a th:href="@{${registrationUrl}}">Register</a>
+            <a th:href="@{${registrationUrl}}">Activate account</a>
     </tr>
 </table>
 
