--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="hurima"/>
+    <meta name="description" content="fleabay" />
     <link rel="icon" href="./favicon.ico" />
-    <link rel="apple-touch-icon" href="./src/images/icons/hurima-kun-192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="./src/images/icons/fleabay-kun-192.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>hurima</title>
+    <title>fleabay</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
